--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     background-color: #848383;
     color: #e1e1e1;
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+   
 }
 .card {
     margin-bottom: 20px;
@@ -57,6 +58,7 @@ body {
 }
 .navbar {
     margin-bottom: 20px;
+    
 }
 .offcanvas-body {
     background-color: #343a40;
@@ -273,7 +275,12 @@ footer.footer {
  
   
   .form-control::placeholder {
-    color: #888;
+    color: #3c3c3c;
+  }
+
+  .form-label {
+    color: #ff0000;
+    font-weight: 600;
   }
   
  
